@@ -3,11 +3,10 @@
  *
  * Public interface for SELinux policies.
  *
- * @author Kevin Carr  kcarr@tresys.com
  * @author Jeremy A. Mowery jmowery@tresys.com
  * @author Jason Tang  jtang@tresys.com
  *
- * Copyright (C) 2006 Tresys Technology, LLC
+ * Copyright (C) 2006-2007 Tresys Technology, LLC
  *
  *  This library is free software; you can redistribute it and/or
  *  modify it under the terms of the GNU Lesser General Public
@@ -71,67 +70,107 @@ static void qpol_handle_route_to_callback(void *varg, qpol_policy_t * policy, in
 	}
 }
 
+apol_policy_t *apol_policy_create_from_policy_path(const apol_policy_path_t * path, const int options,
+						   apol_callback_fn_t msg_callback, void *varg)
+{
+	apol_policy_t *policy;
+	const char *primary_path;
+	int policy_type;
+	if (!path) {
+		errno = EINVAL;
+		return NULL;
+	}
+
+	if (!(policy = calloc(1, sizeof(apol_policy_t)))) {
+		ERR(NULL, "%s", strerror(ENOMEM));
+		return NULL;	       /* errno set by calloc */
+	}
+	if (msg_callback != NULL) {
+		policy->msg_callback = msg_callback;
+	} else {
+		policy->msg_callback = apol_handle_default_callback;
+	}
+	policy->msg_callback_arg = varg;
+	primary_path = apol_policy_path_get_primary(path);
+	if (options & APOL_POLICY_OPTION_NO_RULES) {
+		policy_type = qpol_policy_open_from_file_no_rules(primary_path, &policy->p, qpol_handle_route_to_callback, policy);
+	} else {
+		policy_type = qpol_policy_open_from_file(primary_path, &policy->p, qpol_handle_route_to_callback, policy);
+	}
+	if (policy_type < 0) {
+		ERR(policy, "Unable to open policy at %s.", primary_path);
+		apol_policy_destroy(&policy);
+		return NULL;	       /* qpol sets errno */
+	}
+	policy->policy_type = policy_type;
+
+	if (apol_policy_path_get_type(path) == APOL_POLICY_PATH_TYPE_MODULAR) {
+		if (!qpol_policy_has_capability(policy->p, QPOL_CAP_MODULES)) {
+			ERR(policy, "%s is not a base policy.", primary_path);
+			apol_policy_destroy(&policy);
+			return NULL;
+		}
+		const apol_vector_t *modules = apol_policy_path_get_modules(path);
+		size_t i;
+		for (i = 0; i < apol_vector_get_size(modules); i++) {
+			const char *module_path = apol_vector_get_element(modules, i);
+			qpol_module_t *mod = NULL;
+			if (qpol_module_create_from_file(module_path, &mod)) {
+				ERR(policy, "Error loading module %s.", module_path);
+				apol_policy_destroy(&policy);
+				return NULL;
+			}
+			if (qpol_policy_append_module(policy->p, mod)) {
+				apol_policy_destroy(&policy);
+				qpol_module_destroy(&mod);
+				return NULL;
+			}
+		}
+		if (qpol_policy_rebuild(policy->p)) {
+			apol_policy_destroy(&policy);
+			return NULL;
+		}
+	}
+	return policy;
+}
+
 int apol_policy_open(const char *path, apol_policy_t ** policy, apol_callback_fn_t msg_callback, void *varg)
 {
-	int policy_type;
+	apol_policy_path_t *policy_path;
 	if (!path || !policy) {
 		errno = EINVAL;
 		return -1;
 	}
-
-	if (policy)
-		*policy = NULL;
-
-	if (!(*policy = calloc(1, sizeof(apol_policy_t)))) {
+	*policy = NULL;
+	if ((policy_path = apol_policy_path_create(APOL_POLICY_PATH_TYPE_MONOLITHIC, path, NULL)) == NULL) {
 		ERR(NULL, "%s", strerror(ENOMEM));
-		return -1;	       /* errno set by calloc */
+		return -1;
 	}
-	if (msg_callback != NULL) {
-		(*policy)->msg_callback = msg_callback;
-	} else {
-		(*policy)->msg_callback = apol_handle_default_callback;
+	*policy = apol_policy_create_from_policy_path(policy_path, 0, msg_callback, varg);
+	apol_policy_path_destroy(&policy_path);
+	if (*policy == NULL) {
+		return -1;
 	}
-	(*policy)->msg_callback_arg = varg;
-
-	policy_type = qpol_policy_open_from_file(path, &((*policy)->p), qpol_handle_route_to_callback, (*policy));
-	if (policy_type < 0) {
-		ERR(*policy, "Unable to open policy at %s.", path);
-		apol_policy_destroy(policy);
-		return -1;	       /* qpol sets errno */
-	}
-	(*policy)->policy_type = policy_type;
 	return 0;
 }
 
-int apol_policy_open_no_rules(const char *path, apol_policy_t ** policy, apol_callback_fn_t msg_callback, void *callback_arg)
+int apol_policy_open_no_rules(const char *path, apol_policy_t ** policy, apol_callback_fn_t msg_callback, void *varg)
 {
-	int policy_type;
+	apol_policy_path_t *policy_path;
 	if (!path || !policy) {
 		errno = EINVAL;
 		return -1;
 	}
-
-	if (policy)
-		*policy = NULL;
-
-	if (!(*policy = calloc(1, sizeof(apol_policy_t)))) {
+	*policy = NULL;
+	if ((policy_path = apol_policy_path_create(APOL_POLICY_PATH_TYPE_MONOLITHIC, path, NULL)) == NULL) {
 		ERR(NULL, "%s", strerror(ENOMEM));
-		return -1;	       /* errno set by calloc */
+		return -1;
 	}
-	if (msg_callback != NULL) {
-		(*policy)->msg_callback = msg_callback;
-	} else {
-		(*policy)->msg_callback = apol_handle_default_callback;
+	*policy = apol_policy_create_from_policy_path(policy_path, APOL_POLICY_OPTION_NO_RULES, msg_callback, varg);
+	apol_policy_path_destroy(&policy_path);
+	if (*policy == NULL) {
+		return -1;
 	}
-	(*policy)->msg_callback_arg = callback_arg;
-
-	policy_type = qpol_policy_open_from_file_no_rules(path, &((*policy)->p), qpol_handle_route_to_callback, (*policy));
-	if (policy_type < 0) {
-		ERR(*policy, "Unable to open policy at %s.", path);
-		apol_policy_destroy(policy);
-		return -1;	       /* qpol sets errno */
-	}
-	(*policy)->policy_type = policy_type;
 	return 0;
 }
 
